--- a/src/Soenneker.Google.Credentials.csproj
+++ b/src/Soenneker.Google.Credentials.csproj
@@ -1,4 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
+﻿<?xml version="1.0" encoding="utf-8"?>
+
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -30,8 +32,15 @@
         <LangVersion>latest</LangVersion>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageIcon>icon.png</PackageIcon>
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild></PropertyGroup>
-    
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <Compile Remove="NewFolder\**" />
+      <EmbeddedResource Remove="NewFolder\**" />
+      <None Remove="NewFolder\**" />
+    </ItemGroup>
+
     <ItemGroup>
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
@@ -40,7 +49,7 @@
 
     <ItemGroup>
         <PackageReference Include="Google.Apis.Auth" Version="1.73.0" />
+        <PackageReference Include="Soenneker.Dictionaries.SingletonKeys" Version="4.0.5" />
         <PackageReference Include="Soenneker.Utils.File" Version="4.0.2026" />
-        <PackageReference Include="Soenneker.Utils.SingletonDictionary" Version="4.0.1147" />
     </ItemGroup>
 </Project>
